# pytcpproxy

./: README.md  pyproject.toml  requirements-dev.txt  setup.py
pypxy/: proxy.py
pytcpproxy/: tcp_proxy.py
tests/: test_proxy.py  test_tcp_proxy.py
