[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytcpproxy"
version = "0.1.0"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpbin",
]

[project.scripts]
pytcpproxy = "pytcpproxy.tcp_proxy:main"

[tool.setuptools.packages.find]
where = [""]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"